fix: prevent x-axis overflow

--- a/index.css
+++ b/index.css
@@ -7,6 +7,10 @@
 	box-sizing: border-box;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 :root
 {
 	--red: #F74747;
@@ -61,7 +65,6 @@ footer > .container
 	margin-left: 200px;
 	margin-right: 200px;
 }
-
 header > .container
 {
 	height: 70px;
@@ -151,7 +154,6 @@ main
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	overflow-x: hidden;
 }
 main > section
 {
